--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       var id = $_GET["id"];
       if (!id) {
         //You are the first player
+        //Get id from server todo
       }
       else {
         //Either you typed in a random id or you are not the first player
@@ -48,6 +49,7 @@
             }
             else if (this.responseText == "false") {
               //Random id, you are the first player
+              //Get id from server todo
             }
           }
         };
