--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             }
             else if (this.responseText == "false") {
               //Random id, you are the first player
-              //Get id from server todo
+              //Sent id to server todo
             }
           }
         };
