--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
         function init()
         {
-          output = document.getElementById("output");
-          testWebSocket();
+          //output = document.getElementById("output");
+          //testWebSocket();
         }
 
         function testWebSocket()
@@ -31,18 +31,20 @@
 
         function onOpen(evt)
         {
-          writeToScreen("CONNECTED");
+          //writeToScreen("CONNECTED");
+          console.log("websocket opened");
           doSend("WebSocket rocks");
         }
 
         function onClose(evt)
         {
-          writeToScreen("DISCONNECTED");
+          //writeToScreen("DISCONNECTED");
+          console.log("websocket closed");
         }
 
         function onMessage(evt)
         {
-          writeToScreen('<span style="color: blue;">RESPONSE: ' + evt.data+'</span>');
+          //writeToScreen('<span style="color: blue;">RESPONSE: ' + evt.data+'</span>');
           websocket.close();
         }
 
