--- a/index.html
+++ b/index.html
@@ -12,61 +12,36 @@
     </style>
     <script>
         var wsUri = "ws://echo.websocket.org/";
-        var output;
-
-        function init()
-        {
-          //output = document.getElementById("output");
-          //testWebSocket();
+        function createWebSocket() {
+          var websocket = new WebSocket(wsUri);
+          websocket.onopen = function(evt) {onOpen(evt)};
+          websocket.onclose = function(evt) {onClose(evt)};
+          websocket.onmessage = function(evt) {onMessage(evt)};
+          websocket.onerror = function(evt) {onError(evt)};
+          return websocket
         }
 
-        function testWebSocket()
-        {
-          websocket = new WebSocket(wsUri);
-          websocket.onopen = function(evt) { onOpen(evt) };
-          websocket.onclose = function(evt) { onClose(evt) };
-          websocket.onmessage = function(evt) { onMessage(evt) };
-          websocket.onerror = function(evt) { onError(evt) };
-        }
-
-        function onOpen(evt)
-        {
-          //writeToScreen("CONNECTED");
+        function onOpen(evt) {
           console.log("websocket opened");
-          doSend("WebSocket rocks");
+          send("WebSocket rocks");
         }
 
-        function onClose(evt)
-        {
-          //writeToScreen("DISCONNECTED");
+        function onClose(evt) {
           console.log("websocket closed");
         }
 
-        function onMessage(evt)
-        {
-          //writeToScreen('<span style="color: blue;">RESPONSE: ' + evt.data+'</span>');
+        function onMessage(evt) {
+          //evt.data
           websocket.close();
         }
 
-        function onError(evt)
-        {
-          writeToScreen('<span style="color: red;">ERROR:</span> ' + evt.data);
+        function onError(evt) {
+          //evt.data
         }
 
-        function doSend(message)
-        {
-          writeToScreen("SENT: " + message);
+        function send(message) {
           websocket.send(message);
         }
-
-        function writeToScreen(message)
-        {
-          var pre = document.createElement("p");
-          pre.style.wordWrap = "break-word";
-          pre.innerHTML = message;
-          output.appendChild(pre);
-        }
-
         window.addEventListener("load", init, false);
     </script>
   </head>
