--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       }
     </style>
     <script>
-        var wsUri = "ws://echo.websocket.org/";
+        var wsUri = "ws://mpcn.com/";
         function createWebSocket() {
           var websocket = new WebSocket(wsUri);
           websocket.onopen = function(evt) {onOpen(evt)};
